--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="mainbox">
             <div class="first">
                 <p align="center" class="big">Welcome!</p>
-                <p align="center" class="small">Play barin testing games or talk to a bot.<br> Practical and fun.</p>
+                <p align="center" class="small">Play brain testing games or talk to a bot.<br> Practical and fun.</p>
             </div>
          </div>
 
@@ -57,7 +57,7 @@
          <div class="mainbox2">
             <div class="first">
                 <p align="center" class="big1">Welcome!</p>
-                <p align="center" class="small1">Play testing games or talk to a bot.<br> Practical and fun.</p>
+                <p align="center" class="small1">Play brain testing games or talk to a bot.<br> Practical and fun.</p>
             </div>
          </div>    
 </body>
